# NNSim

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  nn_simulator.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
scripts/: benchmark_matrix.py  render_registry_report.py
src/nnsim/: __init__.py  activations.py  callbacks.py  cli.py  config.py  data.py  datasets.py  layers.py  losses.py  metrics.py  monitoring.py  network.py  optimizers.py  schedulers.py  trainer.py  types.py
tests/: test_data.py  test_datasets.py  test_metrics.py  test_monitoring.py  test_network.py  test_optimizers.py  test_schedulers.py  test_serialization.py  test_trainer.py
